--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,4 @@ services:
     name: flask-api
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+    startCommand: python server.py
