--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,6 @@ services:
   - type: web
     name: flask-api
     env: python
-    buildCommand: |
-      apt-get update && apt-get install -y gnupg curl apt-transport-https
-      curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
-      curl https://packages.microsoft.com/config/debian/10/prod.list > /etc/apt/sources.list.d/mssql-release.list
-      apt-get update
-      ACCEPT_EULA=Y apt-get install -y msodbcsql18 unixodbc-dev
-      pip install -r requirements.txt
-    startCommand: gunicorn server:app
+    buildCommand: "./build.sh && pip install -r requirements.txt"
+    startCommand: "gunicorn server:app"
+
